Fix navbar layout on small devices

--- a/employee-management-app/src/App.css
+++ b/employee-management-app/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 }
+
+@media only screen and (max-width: 992px) {
+  #mobileNavbar {width: 100%}
+}
